--- a/cv/3/index.html
+++ b/cv/3/index.html
@@ -2,167 +2,264 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>CV Ade Miando</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CV Ade Oftomiando</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
       margin: 0;
-      padding: 0;
-      background: #fff;
-      color: #333;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
+      background: #f9fafb;
+      color: #111827;
     }
     header {
+      background: var(--accent, #2563eb);
+      color: white;
+      padding: 2rem;
       text-align: center;
-      margin-bottom: 20px;
+      transition: background-color 0.3s;
     }
-    h1 {
-      font-size: 28px;
-      margin-bottom: 5px;
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
     }
-    h2 {
-      font-size: 20px;
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 5px;
-      margin-top: 25px;
-      margin-bottom: 10px;
+    header p {
+      margin: 0.3rem 0;
+      font-size: 0.95rem;
     }
-    ul { padding-left: 20px; }
-    li { margin-bottom: 5px; }
-    a {
+    header a {
       color: inherit;
       text-decoration: none;
     }
-    .controls {
-      position: fixed;
-      top: 10px;
-      right: 10px;
+    .toolbar {
       display: flex;
-      gap: 10px;
-      z-index: 1000;
+      justify-content: flex-end;
+      gap: 1rem;
+      background: #f3f4f6;
+      padding: 0.5rem 1rem;
+      border-bottom: 1px solid #e5e7eb;
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
-    .controls button, .controls input[type=color] {
-      padding: 6px 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+    .toolbar button, .toolbar input[type=color] {
+      border: none;
+      background: none;
       cursor: pointer;
-      background: #f9f9f9;
+      font-size: 1.2rem;
     }
-    .contact i {
-      margin-right: 8px;
-      color: #555;
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem;
+      background: white;
     }
-    .footer {
+    section {
+      margin-bottom: 2rem;
+    }
+    h2 {
+      color: var(--accent, #2563eb);
+      border-bottom: 2px solid var(--accent, #2563eb);
+      display: inline-block;
+      margin-bottom: 1rem;
+      font-size: 1.2rem;
+      transition: color 0.3s, border-bottom-color 0.3s;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    footer {
       text-align: center;
-      margin-top: 30px;
+      padding: 1.5rem 0 2rem 0;
+      background: #f9fafb; /* Match body background */
     }
-    .footer img {
-      width: 80px;
-      height: 80px;
+    footer p {
+      font-size: 0.85rem;
+      color: #6b7280; /* Dark gray for readability */
+      margin: 0.5rem 0 0 0;
     }
     @media print {
-      .controls { display: none; }
+      .toolbar { 
+        display: none; 
+      }
+      body { 
+        background: white; 
+      }
+      .container { 
+        box-shadow: none; 
+        padding: 0; 
+      }
+      footer {
+        margin-top: 2rem;
+        page-break-before: auto;
+        background: white !important;
+      }
+       footer p {
+        color: #111827 !important;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="controls">
-    <button onclick="toggleLanguage()"><i class="fa-solid fa-globe"></i></button>
-    <input type="color" id="colorPicker" value="#333333" onchange="changeColor(this.value)">
+  <div class="toolbar">
+    <button id="langToggle"><i class="fa-solid fa-globe"></i></button>
+    <input type="color" id="colorPicker" value="#2563eb">
     <button onclick="window.print()"><i class="fa-solid fa-print"></i></button>
   </div>
-
+  <header>
+    <h1>Ade Oftomiando</h1>
+    <p>Wonosobo, Indonesia | 10 Mei 1999</p>
+    <p>
+      <a href="https://wa.me/6285726951002" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp"></i> 085726951002</a> | 
+      <a href="mailto:ademiandoo@gmail.com"><i class="fa-solid fa-envelope"></i> ademiandoo@gmail.com</a> | 
+      <a href="https://github.com/ademiando" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i> ademiando</a>
+    </p>
+  </header>
   <div class="container" id="cv">
-    <header>
-      <h1>Ade Miando</h1>
-      <p class="contact">
-        <a href="https://wa.me/6281234567890" target="_blank"><i class="fab fa-whatsapp"></i> +62 812-3456-7890</a> | 
-        <a href="mailto:ademiandoo@gmail.com"><i class="fa-solid fa-envelope"></i> ademiandoo@gmail.com</a> | 
-        <a href="https://github.com/ademiando" target="_blank"><i class="fab fa-github"></i> ademiando</a>
-      </p>
-    </header>
-
     <!-- Ringkasan -->
-    <section id="summary">
-      <h2>Ringkasan Diri</h2>
-      <p class="id">
-        Profesional dengan ketertarikan mendalam pada teknologi dan inovasi digital untuk mendukung perjalanan investasi. 
-        Memiliki pengalaman dalam pengembangan web modern, instruksi komunitas, serta membangun solusi berbasis data yang efisien.
+    <section>
+      <h2 data-lang="id">Ringkasan Diri</h2>
+      <h2 data-lang="en" style="display:none">Summary</h2>
+      <p data-lang="id">
+        Saya adalah individu proaktif dengan latar belakang autodidak di bidang investasi kripto dan saham sejak 2020. Ketertarikan saya pada teknologi mendorong saya mempelajari pemrograman web untuk menciptakan alat analisis data, automasi, serta visualisasi portofolio. Tujuan saya adalah menghadirkan solusi investasi yang lebih akurat, praktis, dan mudah diakses.
       </p>
-      <p class="en" style="display:none;">
-        A professional with a deep interest in technology and digital innovation to support the investment journey. 
-        Experienced in modern web development, community instruction, and building efficient data-driven solutions.
+      <p data-lang="en" style="display:none">
+        I am a proactive self-learner with hands-on experience in cryptocurrency and stock investments since 2020. My passion for technology has driven me to explore web development, aiming to build tools for data analysis, automation, and portfolio visualization. My mission is to deliver investment solutions that are accurate, practical, and accessible.
       </p>
     </section>
-
     <!-- Pengalaman -->
-    <section id="experience">
-      <h2>Pengalaman</h2>
+    <section>
+      <h2 data-lang="id">Pengalaman</h2>
+      <h2 data-lang="en" style="display:none">Experience</h2>
       <ul>
-        <li class="id">
-          <strong>Instruktur & Mentor Komunitas Gaming</strong> (2020 – 2022)<br>
-          Membimbing komunitas Axie Infinity, melatih strategi permainan, mengatur manajemen tim, serta membantu pemain baru memahami mekanisme ekonomi digital berbasis blockchain. 
-          Berperan sebagai mentor dan fasilitator diskusi strategi untuk komunitas lokal.
+        <li data-lang="id">
+          <strong>Instruktur & Analis Komunitas Kripto</strong> (2020 – 2022)<br>
+          Membimbing anggota komunitas dalam memahami strategi investasi kripto, mengelola forum diskusi, serta menganalisis tren pasar untuk portofolio pribadi.
         </li>
-        <li class="en" style="display:none;">
-          <strong>Instructor & Gaming Community Mentor</strong> (2020 – 2022)<br>
-          Guided the Axie Infinity community, trained gameplay strategies, managed team coordination, and assisted newcomers in understanding blockchain-based digital economies. 
-          Acted as a mentor and facilitator for local community discussions.
+        <li data-lang="en" style="display:none">
+          <strong>Crypto Community Instructor & Analyst</strong> (2020 – 2022)<br>
+          Guided community members in understanding crypto investment strategies, managed discussions, and analyzed market trends for personal portfolios.
         </li>
-        <li class="id">
-          <strong>Pengembang Web – Proyek Bloomberg Tracker</strong><br>
-          Membangun situs pelacak portofolio investasi tanpa login, di mana pengguna dapat menyimpan data secara independen menggunakan Supabase. 
-          Proyek ini terintegrasi dengan lab untuk uji coba trading, analisis pola pasar historis, eksekusi order menggunakan kode robotik, serta mendukung koneksi wallet (DEX/CEX). 
-          Fitur tambahan berupa kurasi berita relevan sesuai portofolio investasi.
+        <li data-lang="id">
+          <strong>Pengusaha Salad Buah</strong> (2022 – 2023)<br>
+          Mengelola operasional usaha kecil, dari produksi hingga pemasaran, serta membangun loyalitas pelanggan.
         </li>
-        <li class="en" style="display:none;">
-          <strong>Web Developer – Bloomberg Tracker Project</strong><br>
-          Developed an investment portfolio tracking site without login, enabling users to store data independently with Supabase. 
-          Integrated with a lab for trading simulations, historical market analysis, robotic order execution, and wallet connections (DEX/CEX). 
-          Included an additional feature: curated news relevant to user portfolios.
+        <li data-lang="en" style="display:none">
+          <strong>Fruit Salad Entrepreneur</strong> (2022 – 2023)<br>
+          Managed a small business operation end-to-end, from production to marketing, while fostering customer loyalty.
+        </li>
+        <li data-lang="id">
+          <strong>Barista</strong> (2023 – Sekarang)<br>
+          Menyajikan kopi dengan standar kualitas tinggi serta membangun pengalaman pelanggan yang ramah dan profesional.
+        </li>
+        <li data-lang="en" style="display:none">
+          <strong>Barista</strong> (2023 – Present)<br>
+          Delivered high-quality coffee beverages while creating a welcoming and professional customer experience.
         </li>
       </ul>
+    </section>
+
+    <!-- Proyek -->
+    <section>
+      <h2 data-lang="id">Proyek</h2>
+      <h2 data-lang="en" style="display:none">Project</h2>
+      <p data-lang="id">
+        <strong>BloomBoard – Platform Pelacak Portofolio & Lab Trading</strong><br>
+        Merancang situs web yang memungkinkan pengguna memantau portofolio investasi tanpa login, menyimpan data secara independen melalui integrasi Supabase. Platform ini dilengkapi laboratorium trading untuk menguji strategi dengan data historis, mendukung eksekusi otomatis berbasis kode/robot, serta menyediakan halaman trading nyata dengan koneksi langsung ke wallet atau broker. Selain itu, fitur agregator berita cerdas menghadirkan artikel relevan yang disesuaikan dengan komposisi portofolio, serta opsi kustomisasi tampilan sesuai kebutuhan investor.
+      </p>
+      <p data-lang="en" style="display:none">
+        <strong>BloomBoard – Portfolio Tracker & Trading Lab</strong><br>
+        Designed a web platform that allows users to track investments without login, with independent data storage via Supabase. The platform includes a trading lab to test strategies using historical data, supports automated execution with custom code or bots, and offers live trading by connecting directly to wallets or brokers. Additionally, an intelligent news aggregator delivers curated articles aligned with the user’s portfolio composition, alongside customizable views tailored for each investor.
+      </p>
     </section>
 
     <!-- Keterampilan -->
-    <section id="skills">
-      <h2>Keterampilan</h2>
-      <ul class="id">
-        <li>Pengembangan Web (HTML, CSS, JavaScript, React)</li>
-        <li>Integrasi Basis Data (Supabase, PostgreSQL)</li>
-        <li>Trading & Analisis Pasar</li>
-        <li>Komunikasi & Mentoring Komunitas</li>
-        <li>Kemahiran Bahasa: Indonesia & Inggris</li>
+    <section>
+      <h2 data-lang="id">Keterampilan</h2>
+      <h2 data-lang="en" style="display:none">Skills</h2>
+      <ul data-lang="id">
+        <li>Analisis Pasar Kripto & Saham</li>
+        <li>Manajemen Portofolio</li>
+        <li>Komunikasi Komunitas</li>
+        <li>HTML, CSS, JavaScript</li>
+        <li>Git & GitHub, Vercel, Supabase</li>
+        <li>Automasi & Robot Trading</li>
+        <li>Manajemen Waktu & Kerja Tim</li>
+        <li>Kemahiran Bahasa Inggris</li>
       </ul>
-      <ul class="en" style="display:none;">
-        <li>Web Development (HTML, CSS, JavaScript, React)</li>
-        <li>Database Integration (Supabase, PostgreSQL)</li>
-        <li>Trading & Market Analysis</li>
-        <li>Community Communication & Mentoring</li>
-        <li>Language Skills: Indonesian & English</li>
+      <ul data-lang="en" style="display:none">
+        <li>Crypto & Stock Market Analysis</li>
+        <li>Portfolio Management</li>
+        <li>Community Engagement</li>
+        <li>HTML, CSS, JavaScript</li>
+        <li>Git & GitHub, Vercel, Supabase</li>
+        <li>Automation & Trading Bots</li>
+        <li>Time Management & Teamwork</li>
+        <li>English Proficiency</li>
       </ul>
     </section>
 
-    <div class="footer">
-      <p>Scan to access CV online:</p>
-      <img src="https://api.qrserver.com/v1/create-qr-code/?size=80x80&data=https://ademiando.com/cv" alt="QR Code">
-    </div>
+    <!-- Minat -->
+    <section>
+      <h2 data-lang="id">Minat & Hobi</h2>
+      <h2 data-lang="en" style="display:none">Interests</h2>
+      <p data-lang="id">Mendaki gunung, membaca filsafat, mempelajari ekonomi makro dan politik, serta aktif berinvestasi dan melakukan riset pasar.</p>
+      <p data-lang="en" style="display:none">Hiking, reading philosophy, exploring macroeconomics and politics, while actively investing and conducting market research.</p>
+    </section>
+
   </div>
+  
+  <footer>
+    <img src="https://api.qrserver.com/v1/create-qr-code/?size=80x80&data=https://ademiando.com/cv" alt="QR Code to CV" style="background:white; padding: 5px; border-radius: 5px;">
+    <p data-lang="id">Scan untuk versi online</p>
+    <p data-lang="en" style="display:none;">Scan for online version</p>
+  </footer>
 
   <script>
-    function toggleLanguage() {
-      document.querySelectorAll('.id').forEach(el => el.style.display = (el.style.display === 'none') ? '' : 'none');
-      document.querySelectorAll('.en').forEach(el => el.style.display = (el.style.display === 'none') ? '' : 'none');
+    // Toggle Bahasa
+    const toggleBtn = document.getElementById('langToggle');
+    toggleBtn.addEventListener('click', () => {
+      document.querySelectorAll('[data-lang]').forEach(el => {
+        if (el.style.display === 'none') {
+          el.style.display = '';
+        } else {
+          el.style.display = 'none';
+        }
+      });
+    });
+
+    // Warna Aksen
+    const colorPicker = document.getElementById('colorPicker');
+    const printStyle = document.createElement('style');
+    document.head.appendChild(printStyle);
+
+    function updateAccentColor(color) {
+      document.documentElement.style.setProperty('--accent', color);
+      
+      printStyle.textContent = `
+        @media print {
+          header {
+            background-color: ${color} !important;
+            -webkit-print-color-adjust: exact;
+            print-color-adjust: exact;
+          }
+          h2 {
+            color: ${color} !important;
+            border-bottom-color: ${color} !important;
+            -webkit-print-color-adjust: exact;
+            print-color-adjust: exact;
+          }
+        }
+      `;
     }
-    function changeColor(color) {
-      document.body.style.color = color;
-      document.querySelectorAll('h1,h2,strong,i').forEach(el => el.style.color = color);
-    }
+
+    colorPicker.addEventListener('input', e => {
+      updateAccentColor(e.target.value);
+    });
+
+    // Set initial color on page load
+    updateAccentColor(colorPicker.value);
   </script>
 </body>
 </html>
