--- a/cv/1/index.html
+++ b/cv/1/index.html
@@ -156,8 +156,8 @@
                 <li data-lang="en">Vercel & Supabase</li>
                 <li data-lang="id">Manajemen waktu & kerja tim</li>
                 <li data-lang="en">Time management & teamwork</li>
-                <li data-lang="id">Kemahiran bahasa Inggris aktif</li>
-                <li data-lang="en">Proficient in English (active communication skills)</li>
+                <li data-lang="id">Bahasa Inggris (listening & speaking)</li>
+                <li data-lang="en">English – listening & speaking</li>
             </ul>
         </section>
         
