--- a/index.html
+++ b/index.html
@@ -142,20 +142,20 @@
           <p>Sistem & eksperimen terbuka untuk pertumbuhan modal dan riset pasar.</p>
         </div>
         <div class="card-footer">
-          <a href="https://ademiando.com/portofolio2" target="_blank" class="portfolio-link">View Website <i class="fas fa-external-link-alt"></i></a>
+          <a href="https://bloomboard-two.vercel.app/" target="_blank" class="portfolio-link">View Website <i class="fas fa-external-link-alt"></i></a>
         </div>
       </div>
       
       <div class="portfolio-card glass-card">
         <div class="card-header">
-          <img src="assets/nail.png" alt="Katalog Online">
+          <img src="assets/nails.png" alt="Katalog Online">
         </div>
         <div class="card-body">
           <h3>Katalog Online – UI/UX Designer</h3>
           <p>Modern portfolio website for UMKM</p>
         </div>
         <div class="card-footer">
-          <a href="https://ademiando.github.io/nail" target="_blank" class="portfolio-link">View Website <i class="fas fa-external-link-alt"></i></a>
+          <a href="https://ademiando.github.io/nails" target="_blank" class="portfolio-link">View Website <i class="fas fa-external-link-alt"></i></a>
         </div>
       </div>
 
